# python_modules

./: Intra Projects Python Module 08 Edit.html  main.py
day0/ex5/: ft_count_harvest_recursive.py
day00/ex4/: ft_water_reminder.py
day00/ex6/: ft_garden_summary.py
day02/ex0/: ft_first_exception.py
day02/ex1/: ft_different_errors.py
day02/ex2/: ft_custom_errors.py
day02/ex3/: ft_finally_block.py
day1/ex0/: ft_garden_intro.py
day1/ex1/: ft_garden_data.py
day1/ex2/: ft_plant_growth.py
day1/ex3/: ft_plant_factory.py
day1/ex4/: ft_garden_security.py
day1/ex5/: ft_plant_types.py
day1/ex6/: ft_garden_analytics.py
day10/: Intra Projects Python Module 10 Edit.html  decorator_mastery.py  functools_artifacts.py  scope_mysteries.py
day10/ex0/: lambda_spells.py
day10/ex1/: higher_magic.py
day10/ex2/: scope_mysteries.py
day10/ex3/: functools_artifacts.py
day10/ex4/: decorator_mastery.py
day2/ex0/: ft_first_exception.py
day2/ex1/: ft_different_errors.py
day2/ex2/: ft_custom_errors.py  ft_different_errors.py
day2/ex3/: ft_custom_errors.py  ft_finally_block.py
day3/: txt.txt
day5/: Intra Projects Python Module 05 Edit.html
day5/ex0/: test.py  (+1 more)
day6/: ft_alembic_2.py  ft_alembic_4.py  ft_kaboom_1.py
day7/:  capacitor.py  Intra Projects Python Module 07 Edit.htm  battle.py  tournament.py
day8/ex1/: loading.py  pyproject.toml  test.py
ex0/: ft_hello_garden.py
ex1/: ft_plot_area.py
ex2/: ft_harvest_total.py
ex3/: ft_plant_age.py
ex4/: ft_water_reminder.py
ex5/: ft_count_harvest_iterative.py
ex7/: ft_seed_inventory.py
(+48 files in other folders)
